Fix save button on Appointments settings page shifts to right (#18)

--- a/css/settings.css
+++ b/css/settings.css
@@ -1,3 +1,7 @@
+#appointments{
+    max-width: 720px;
+}
+
 .form-col{
     display: flex;
     flex-direction: column;
@@ -56,7 +60,11 @@ input{
 }
 
 .save{
-    margin-left: 20rem
+    margin-left: auto;
+}
+
+#saved {
+    padding-right: 1rem;
 }
 
 .form-col label{
